--- a/web/armMaster/List.xhtml
+++ b/web/armMaster/List.xhtml
@@ -14,11 +14,19 @@
                 <h:commandLink action="#{armMasterController.prepareCreate}" value="新しい武器を作る"/>
                 <br/>
 
-                <h:outputText escape="false" value="#{bundle.ListArmMasterEmpty}" rendered="#{armMasterController.items.rowCount == 0}"/>
+                <h:outputText escape="false" 
+                              value="#{bundle.ListArmMasterEmpty}" 
+                              rendered="#{armMasterController.items.rowCount == 0}"/>
                 <h:panelGroup rendered="#{armMasterController.items.rowCount > 0}">
-                    <h:outputText value="#{armMasterController.pagination.pageFirstItem + 1}..#{armMasterController.pagination.pageLastItem + 1}/#{armMasterController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{armMasterController.previous}" value="#{bundle.Previous} #{armMasterController.pagination.pageSize}" rendered="#{armMasterController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{armMasterController.next}" value="#{bundle.Next} #{armMasterController.pagination.pageSize}" rendered="#{armMasterController.pagination.hasNextPage}"/>&nbsp;
+                    <h:outputText value="#{armMasterController.pagination.pageFirstItem + 1}..
+                                  #{armMasterController.pagination.pageLastItem + 1}/
+                                  #{armMasterController.pagination.itemsCount}"/>&nbsp;
+                    <h:commandLink action="#{armMasterController.previous}" 
+                                   value="#{bundle.Previous} #{armMasterController.pagination.pageSize}" 
+                                   rendered="#{armMasterController.pagination.hasPreviousPage}"/>&nbsp;
+                    <h:commandLink action="#{armMasterController.next}" 
+                                   value="#{bundle.Next} #{armMasterController.pagination.pageSize}" 
+                                   rendered="#{armMasterController.pagination.hasNextPage}"/>&nbsp;
                     <h:panelGrid id="tableGrid" styleClass="tableGrid">
                     <h:dataTable value="#{armMasterController.items}" var="item" border="0" cellpadding="2" 
                                  cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" 
