--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -25,19 +25,27 @@
     <h:form>                                
       <h:panelGrid columns="10" id="subHeaderGrid" style="width: 100%; height: 100%;" styleClass="subheader">
         <h:panelGrid id="profileCell" rendered="false" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-          <h:commandLink action="#{pageHeader.profileLink_action}" id="profileLink2" styleClass="subheadertext" value="プレイヤー設定"/>
+          <h:commandLink action="#{pageHeader.profileLink_action}" id="profileLink2" styleClass="subheadertext" 
+                         value="プレイヤー設定"/>
         </h:panelGrid>
-        <h:panelGrid id="logoutCell" rendered="#{loginController.loggedIn}" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-          <h:commandLink action="#{loginController.logout_action()}" id="logoutLink" styleClass="subheadertext" value="ログアウト"/>
+        <h:panelGrid id="logoutCell" rendered="#{loginController.loggedIn}" style="width: 100%; height: 100%;" 
+                     styleClass="subheaderlink">
+          <h:commandLink action="#{loginController.logout_action()}" id="logoutLink" styleClass="subheadertext" 
+                         value="ログアウト"/>
         </h:panelGrid>
-        <h:panelGrid id="loginCell" rendered="#{loginController.notLoggedIn}" style="width: 100%; height: 100%;" styleClass="subheaderlink">
+        <h:panelGrid id="loginCell" rendered="#{loginController.notLoggedIn}" style="width: 100%; height: 100%;" 
+                     styleClass="subheaderlink">
           <h:commandLink action="/login/LoginPage" id="loginLink" styleClass="subheadertext" value="ログイン"/>
         </h:panelGrid>
-        <h:panelGrid id="newCharaCell" rendered="false" style="width: 100%; height: 100%;" styleClass="subheaderlink">
-          <h:commandLink action="#{pageHeader.newCharaLink_action}" id="newCharaLink" styleClass="subheadertext" value="新規キャラクター作成"/>
+        <h:panelGrid id="newCharaCell" rendered="false" style="width: 100%; height: 100%;"
+                     styleClass="subheaderlink">
+          <h:commandLink action="#{pageHeader.newCharaLink_action}" id="newCharaLink" 
+                         styleClass="subheadertext" value="新規キャラクター作成"/>
         </h:panelGrid>
-        <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" rendered="false" styleClass="subheaderlink">
-          <h:commandLink action="#{pageHeader.charaListLink_action}" id="charaListLink" styleClass="subheadertext" value="キャラクター一覧"/>                        
+        <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" rendered="false" 
+                     styleClass="subheaderlink">
+          <h:commandLink action="#{pageHeader.charaListLink_action}" id="charaListLink" 
+                         styleClass="subheadertext" value="キャラクター一覧"/>                        
         </h:panelGrid>                   
       </h:panelGrid>
     </h:form>
@@ -48,12 +56,18 @@
           <h:form>
             <h:panelGrid style="width: 100%">
               <h:panelGrid id="charaListCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" styleClass="leftpaneltext" value="キャラクター"/>                        
+                <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" 
+                               styleClass="leftpaneltext" value="キャラクター"/>                                     
               </h:panelGrid>                     
               <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                <h:commandLink action="#{campaignMasterController.prepareList()}" styleClass="leftpaneltext" value="キャンペーン"/>
-                <h:commandLink rendered="#{sessionController.isCampaignSelected()}" action="#{scenarioRecordController.prepareList()}" styleClass="leftpaneltextScenaio" value="シナリオ"/>
-                <h:commandLink rendered="#{sessionController.isScenarioSelected()}" action="#{encounterRecordController.prepareList()}" styleClass="leftpaneltextEncounter" value="エンカウンター"/>                                
+                <h:commandLink action="#{campaignMasterController.prepareList()}" styleClass="leftpaneltext" 
+                               value="キャンペーン"/>
+                <h:commandLink rendered="#{sessionController.isCampaignSelected()}" 
+                               action="#{scenarioRecordController.prepareList()}" 
+                               styleClass="leftpaneltextScenaio" value="シナリオ"/>
+                <h:commandLink rendered="#{sessionController.isScenarioSelected()}" 
+                               action="#{encounterRecordController.prepareList()}" 
+                               styleClass="leftpaneltextEncounter" value="エンカウンター"/>                                
               </h:panelGrid>                                 
               <h:outputLabel value=""/>
               <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
@@ -81,7 +95,7 @@
               </h:panelGrid>                             
             </h:panelGrid>                
           </h:form>                    
-        </h:panelGrid>  
+        </h:panelGrid>          
         <h:panelGrid styleClass="rightpane">
           <h:panelGroup layout="block">
             <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
@@ -90,7 +104,6 @@
         </h:panelGrid>
 
       </h:panelGrid>
-
     </h:panelGrid>
 
     <h:form>
