--- a/web/characterSheet/EditCharacterArmPage.xhtml
+++ b/web/characterSheet/EditCharacterArmPage.xhtml
@@ -14,79 +14,64 @@
     </ui:define>
     <ui:define name="body">
       <h:form>
-        <h:panelGrid columns="1" id="gridPanel1" style="width: 100%">
-          <h:panelGrid columns="1" id="gridPanel6" style="height: 100%; width: 100%">
-            <h:panelGrid id="naviGationGridPanel1" style="height: 100%; width: 100%">
-
-              <h:panelGrid columns="2" id="gridPanel5" style="height: 100%;
-                           text-align: left; width: 100%">
-                <h:panelGrid id="gridPanel3" style="height: 100%; text-align: left; 
-                             width: 100%">
-                  <h:commandButton 
-                    action="#{armMasterController.saveButton_action}" 
-                    id="saveButton1" value="保存"/>
-                </h:panelGrid>
-
-                <h:panelGrid id="gridPanel4" style="height: 100%; text-align: right; 
-                             width: 100%">
-                  <h:commandLink 
-                    action="#{armMasterController
-                              .returnCharacterRecordPageButton_action()}"
-                    id="returnCharacterRecordPageButton1" 
-                    value="キャラクター修正画面へ戻る"/>
-                </h:panelGrid>
-              </h:panelGrid>  
-              <p:dataTable id="dataTable" var="arm" value="#{applicationController.armList}" 
-                           widgetVar="armsTable" 
-                           emptyMessage="指定された条件に合う武器は見つかりませんでした" 
-                           filteredValue="#{armMasterController.filteredArms}"
-                           style="width:100%" >
-                <p:column>
-                  <p:commandButton value="選択" update="" id="ajax"
-                                   action="#{armMasterController.addArm}" 
-                                   styleClass="ui-priority-primary">  
-                    <f:setPropertyActionListener value="#{arm}" target="#{armMasterController.selectedArm}"/>  
-                  </p:commandButton>
-                </p:column>  
-                <p:column id="nameColumn" filterBy="#{arm.name}" sortBy="#{arm.name}"
-                          headerText="名前" footerText="名前"
-                          filterMatchMode="contains">
-                  <h:outputText value="#{arm.name}" />
-                </p:column>
-                <p:column id="damageColumn" headerText="ダメージ" footerText="ダメージ">
-                  <h:outputText value="#{arm.damageDiceNum}#{arm.damageDiceType.name}" />
-                </p:column>
-                <p:column id="armType1MasterColumn" 
-                          headerText="単・軍・特" footerText="単・軍・特"
-                          filterBy="#{arm.armType1}"                             
-                          filterOptions="#{armMasterController.armType1MasterOptions}"
-                          filterMatchMode="exact" >
-                  <h:outputText value="#{arm.armType1.name}" />
-                </p:column>
-                <p:column id="armType2MasterColumn" 
-                          headerText="片・両・投" footerText="片・両・投"
-                          filterBy="#{arm.armType2}"                             
-                          filterOptions="#{armMasterController.armType2MasterOptions}"
-                          filterMatchMode="exact" >
-                  <h:outputText value="#{arm.armType2.name}" />
-                </p:column>
-                <p:column id="armType3MasterColumn" 
-                          headerText="近・遠" footerText="近・遠"
-                          filterBy="#{arm.armType3}"                             
-                          filterOptions="#{armMasterController.armType3MasterOptions}"
-                          filterMatchMode="exact" >
-                  <h:outputText value="#{arm.armType3.name}" />
-                </p:column>
-                <p:column id="damageTypeMasterColumn"
-                          headerText="斬・殴・刺" footerText="斬・殴・刺"
-                          filterBy="#{arm.damageType}"                             
-                          filterOptions="#{armMasterController.damageTypeMasterOptions}"
-                          filterMatchMode="exact" >
-                  <h:outputText value="#{arm.damageType.name}" />
-                </p:column>
-              </p:dataTable>
+        <h:panelGrid columns="1" id="gridPanel6" style="height: 100%; width: 100%">
+          <h:panelGrid id="gridPanel3" style="height: 100%; text-align: left; width: 100%">
+            <h:panelGrid id="gridPanel4" style="height: 100%; text-align: right; 
+                         width: 100%">
+              <h:commandLink 
+                action="EditCharacterRecordPage" id="returnCharacterRecordPageButton1" 
+                value="キャラクター修正画面へ戻る"/>
             </h:panelGrid>
-          </h:panelGrid>
+          </h:panelGrid>  
+          <p:dataTable id="dataTable" var="arm" value="#{applicationController.armList}" 
+                       widgetVar="armsTable" 
+                       emptyMessage="指定された条件に合う武器は見つかりませんでした" 
+                       filteredValue="#{armMasterController.filteredArms}"
+                       style="width:100%" >
+            <p:column>
+              <h:commandButton value="選択" id="ajax"
+                               action="#{armMasterController.addCharacterArmRecord()}" 
+                               styleClass="ui-priority-primary">  
+                <f:setPropertyActionListener value="#{arm}" target="#{armMasterController.selectedArm}"/>  
+              </h:commandButton>
+            </p:column>  
+            <p:column id="nameColumn" filterBy="#{arm.name}" sortBy="#{arm.name}"
+                      headerText="名前" footerText="名前"
+                      filterMatchMode="contains">
+              <h:outputText value="#{arm.name}" />
+            </p:column>
+            <p:column id="damageColumn" headerText="ダメージ" footerText="ダメージ">
+              <h:outputText value="#{arm.damageDiceNum}#{arm.damageDiceType.name}" />
+            </p:column>
+            <p:column id="armType1MasterColumn" 
+                      headerText="単・軍・特" footerText="単・軍・特"
+                      filterBy="#{arm.armType1}"                             
+                      filterOptions="#{armMasterController.armType1MasterOptions}"
+                      filterMatchMode="exact" >
+              <h:outputText value="#{arm.armType1.name}" />
+            </p:column>
+            <p:column id="armType2MasterColumn" 
+                      headerText="片・両・投" footerText="片・両・投"
+                      filterBy="#{arm.armType2}"                             
+                      filterOptions="#{armMasterController.armType2MasterOptions}"
+                      filterMatchMode="exact" >
+              <h:outputText value="#{arm.armType2.name}" />
+            </p:column>
+            <p:column id="armType3MasterColumn" 
+                      headerText="近・遠" footerText="近・遠"
+                      filterBy="#{arm.armType3}"                             
+                      filterOptions="#{armMasterController.armType3MasterOptions}"
+                      filterMatchMode="exact" >
+              <h:outputText value="#{arm.armType3.name}" />
+            </p:column>
+            <p:column id="damageTypeMasterColumn"
+                      headerText="斬・殴・刺" footerText="斬・殴・刺"
+                      filterBy="#{arm.damageType}"                             
+                      filterOptions="#{armMasterController.damageTypeMasterOptions}"
+                      filterMatchMode="exact" >
+              <h:outputText value="#{arm.damageType.name}" />
+            </p:column>
+          </p:dataTable>
           <h:outputText id="outputText29" style="font-size: 8px" 
                         value="#{characterSheetPerLevelController.characterData.id}"/>
         </h:panelGrid>
